fix(contact): fix send button visibility and cursor on hover

--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -64,5 +64,6 @@
     border: 1px solid var(--color-accent);
     float: right;
     border-radius: 4px;
+    cursor: pointer;
   }
 }
